--- a/style.css
+++ b/style.css
@@ -13,20 +13,23 @@ html{
 }
 
 body{
-	background: #ccc;
+	background: #dcdcdc;
 	margin: 30px 50px;
 	line-height: 1.4;
 }
 
 i{
 	padding: 10px 0px;
+	color: black;
 }
 
 .btn{
 	background-color: var(--dark);
 	color: white;
 	padding: 0.6rem 1.3rem;
+	font-family: Arial;
 	text-decoration: none;
+	letter-spacing: 1px;
 	border: 0;
 }
 
@@ -62,7 +65,7 @@ img{
 	text-decoration: none;
 	padding: 0.8rem;
 	text-align: center;
-	font-family: Helvetica;
+	font-family: Arial;
 	text-transform: uppercase;
 	font-size: 1.1rem;
 	color: white;
@@ -116,13 +119,60 @@ img{
 	text-shadow: var(--shadow);
 }
 
-/*LEFT OFF VIDEO AT 30:30. looking pretty good so far. About half way done with the mobile version of the website. Just need to work on the "Podcast" and "Newsletter" porttion of the main container and I should be done with the top half. After that just need to work on the "Media" container and the footer and I should be done with the main page for the mobile version. From there, I'd just need to work on the desktop version which should take some time. Main page should probably be done around Tuesday, or even tomorrow if I'm able to get through it quickly and am able to stay focused. */
-/*BTW remember to update changes made on the project to GitHub and remmeber to use "the-marketpal" instead of "the-trading-journal" because it will not update GitHub. The website will be worked on from there from now on unless there will be small, experimental changes made to the website.*/
+.side-box{
+	background-color: var(--primary);
+	display: grid;
+	align-items: center;
+	justify-items: center;
+	box-shadow: var(--shadow);
+	padding: 1.4rem;
+}
+
 .podcast{
 	grid-area: podcast;
+}
+
+.podcast h2{
+	font-family: GeosansLight;
+	font-weight: 500;
+	color: var(--dark);
 }
 
 .newsletter{
 	grid-area: newsletter;
 }
 
+.newsletter h2{
+	font-family: GeosansLight;
+	font-weight: 500;
+	color: var(--dark);
+}
+
+.media{
+	background-color: var(--primary);
+	box-shadow: var(--shadow);
+	display: grid;
+	grid-gap: 1.4rem 2rem;
+	grid-template-columns: 1fr;
+	padding: 3rem;
+	justify-items: center;
+}
+
+.media h2{
+	font-size: 1.2rem;
+	color: var(--dark);
+	margin-top: 0;
+	font-weight: 500;
+}
+
+footer{
+	margin-top: 2rem;
+	background-color: var(--dark);
+	text-align: center;
+	padding: 1rem
+}
+
+footer i{
+	padding: 0px 2px;
+	color: white;
+}
