--- a/css/about-style.css
+++ b/css/about-style.css
@@ -31,8 +31,8 @@ main h2{
 
 .contact-us{
     display: grid;
-    width: 1000px;
-    height: 550px;
+    width: auto;
+    height: auto;
     background-color: white;
     border: black 1px solid;
     box-shadow: 2px 2px 10px #333;
@@ -43,4 +43,17 @@ main h2{
 .box-wrapper p{
     font-family: 'Arial';
     font-size: 20px;
+}
+
+@media only screen and (min-width: 700px){
+    .contact-us{
+        display: grid;
+        max-width: 1000px;
+        height: 550px;
+        background-color: white;
+        border: black 1px solid;
+        box-shadow: 2px 2px 10px #333;
+        border-radius: 10px;
+        margin: 0 auto;
+    }
 }
