--- a/css/index-style.css
+++ b/css/index-style.css
@@ -203,8 +203,160 @@ img{
     width: max-content;
 }
 
-@media only screen and (min-width: 1000px){
 
+/* Calendar showcase */
+#showcase{
+    min-height: 450px;
+    color: black;
+    text-align: center;
+    padding-top: 50px;
+    border: black 1px solid;
+    /* Might consider taking this one off */
+}
+
+.bg-image{
+	position: fixed;
+	background: #333 url('../img/dual-chart-photo.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 3000px;
+	z-index: -1;
+	opacity: 0.5;
+}
+
+.showcase-content{
+    display: flex;
+    max-width: 600px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.showcase-content h2{
+    font-family: "Lato";
+    font-size: 30px;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+
+.showcase-content p{
+    font-family: "Lato";
+    font-size: 20px;
+    font-weight: 500;
+    padding-bottom: 20px;
+}
+
+#showcase .btn{
+    font-size: 20px;
+    padding: 20px 30px;
+}
+
+/* Mantra */
+.msg-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 150px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+.msg-container h2{
+    font-family: "Lato";
+    font-size: 25px;
+    font-weight: 500;
+}
+
+/* Main container content */
+.main-container{
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-gap: 20px;
+    margin: 20px;
+}
+
+.main-box{
+    display: block;
+    height: 350px;
+    flex-wrap: wrap;
+    background-color: black;
+    padding: 40px;
+}
+
+.main-box h2{
+    font-family: "Lato";
+    font-size: 25px;
+    font-weight: 400;
+    color: white;
+    padding: 20px 0px 10px 0px;
+}
+
+.main-box p{
+    font-family: "Lato";
+    font-size: 15px;
+    font-weight: 400;
+    color: white;
+    padding-bottom: 20px;
+}
+
+.box2{
+    display: grid;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0px 20px 0px;
+}
+
+.box2 h2{
+    font-family: "Lato";
+    font-size: 25px;
+    font-weight: 400;
+    color: white;
+    padding: 10px 0px 0px 0px;
+    margin: 0 auto;
+}
+
+.box2 .btn{
+    margin: 0 auto;
+}
+
+.box2 i{
+    color: white;
+    margin: 0 auto;
+    padding: 20px 0px;
+}
+
+.box3{
+    display: grid;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0px 20px 0px;
+}
+
+.box3 h2{
+    font-family: "Lato";
+    font-size: 25px;
+    font-weight: 400;
+    color: white;
+    padding: 10px 0px 0px 0px;
+    margin: 0 auto;
+}
+
+.box3 .btn{
+    margin: 0 auto;
+}
+
+.box3 i{
+    color: white;
+    margin: 0 auto;
+    padding: 20px 0px;
+}
+
+@media only screen and (min-width: 1000px){
     body{
         display: grid;
         grid-template-rows: 172px 1fr 250px;
@@ -324,6 +476,114 @@ img{
     main{
         grid-area: main;
     }
+
+    /* Showcase content */
+    #showcase{
+        margin-top: 10px;
+    }
+
+    /* Wrapper for main content */
+    .wrapper{
+        display: grid;
+        width: 90%;
+        margin: 0 auto;
+        grid-gap: 20px;
+    }
+
+    /* Main containers */
+    .main-container{
+        display: grid;
+        grid-gap: 20px;
+        margin: 0px 0px 20px 0px;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:
+        'main-box main-box box2'
+        'main-box main-box box3';
+    }
+    
+    .main-box{
+        grid-area: main-box;
+        display: flex;
+        height: 600px;
+        flex-wrap: wrap;
+        background-color: black;
+        padding: 40px;
+        align-content: center;
+    }
+    
+    .main-box h2{
+        font-family: "Lato";
+        font-size: 50px;
+        font-weight: 400;
+        color: white;
+        padding: 20px 0px 10px 0px;
+    }
+    
+    .main-box p{
+        font-family: "Lato";
+        font-size: 20px;
+        font-weight: 400;
+        color: white;
+        padding-bottom: 20px;
+    }
+    
+    .box2{
+        grid-area: box2;
+        display: grid;
+        background-color: black;
+        justify-content: center;
+        align-items: center;
+        padding: 0px 0px 20px 0px;
+    }
+    
+    .box2 h2{
+        font-family: "Lato";
+        font-size: 25px;
+        font-weight: 400;
+        color: white;
+        padding: 10px 0px 0px 0px;
+        margin: 0 auto;
+    }
+    
+    .box2 .btn{
+        margin: 0 auto;
+    }
+    
+    .box2 i{
+        color: white;
+        margin: 0 auto;
+        padding: 20px 0px;
+    }
+    
+    .box3{
+        grid-area: box3;
+        display: grid;
+        background-color: black;
+        justify-content: center;
+        align-items: center;
+        padding: 0px 0px 20px 0px;
+    }
+    
+    .box3 h2{
+        font-family: "Lato";
+        font-size: 25px;
+        font-weight: 400;
+        color: white;
+        padding: 10px 0px 0px 0px;
+        margin: 0 auto;
+    }
+    
+    .box3 .btn{
+        margin: 0 auto;
+    }
+    
+    .box3 i{
+        color: white;
+        margin: 0 auto;
+        padding: 20px 0px;
+    }
+
 
     /* Desktop footer content */
     .main-footer{
