Added new content
-Added stock tracker widget as well as two index tracker widgets.
-Added stock tracker to the stocks in the portfolio section of the website.
-Fixed some formatting bugs.
-Added two new divs to the portfolio page. Those will be used for two watchlists. One of them will be for companies on the watchlist as a possible investment and the other is for companies on the watchlist for possible trades.

--- a/css/style.css
+++ b/css/style.css
@@ -323,14 +323,15 @@ img{
     /* main content */
     main{
         grid-area: main;
+        display: grid;
     }
 
     /* Desktop footer content */
     .main-footer{
         grid-area: main-footer;
         display: grid;
+        width: 100%;
         height: 250px;
-        align-self: start;
         grid-template-columns: 1fr 1fr 1fr;
         background-color: black;
         font-family: "Lato";
