--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -1,3 +1,7 @@
+.page-divider{
+    padding-bottom: 20px;
+}
+
 /* Background image */
 .bg-image{
 	position: fixed;
@@ -64,8 +68,45 @@
         justify-content: center;
     }
 
-    /* Remember to remove height when I start adding new stocks to the portfolio */
-    main{
-        height: 800px;
+    /* Watchlist section */
+    .watchlists-grid{
+        display: grid;
+        grid-gap: 20px;
+        height: 600px;
+        grid-template-columns: repeat(2, 500px);
+        grid-template-areas:
+        'investment-watchlist trade-watchlist';
+        margin: 0px 20px 20px 20px;
+        justify-content: center;
+    }
+
+    .investment-watchlist{
+        grid-area: investment-watchlist;
+        display: grid;
+        background-color: black; opacity: .9;
+        justify-content: center;
+        padding: 20px 0px;
+    }
+
+    .investment-watchlist h2{
+        font-family: "Lato";
+        font-size: 25px;
+        font-weight: 500;
+        color: white;
+    }
+    
+    .trade-watchlist{
+        grid-area: trade-watchlist;
+        display: grid;
+        background-color: black; opacity: .9;
+        justify-content: center;
+        padding: 20px 0px;
+    }
+
+    .trade-watchlist h2{
+        font-family: "Lato";
+        font-size: 25px;
+        font-weight: 500;
+        color: white;
     }
 }
