--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -74,39 +74,91 @@
         grid-gap: 20px;
         height: 600px;
         grid-template-columns: repeat(2, 500px);
-        grid-template-areas:
-        'investment-watchlist trade-watchlist';
         margin: 0px 20px 20px 20px;
         justify-content: center;
+        grid-template-areas:
+        'investment-watchlist trade-watchlist';
     }
 
+
+    /* Investing watchlist div container */
     .investment-watchlist{
         grid-area: investment-watchlist;
         display: grid;
+        grid-template-columns: 300px;
+        grid-template-rows: 50px repeat(4, 200px);
         background-color: black; opacity: .9;
+        padding: 20px 100px;
         justify-content: center;
-        padding: 20px 0px;
+        overflow: scroll;
+        overflow-x: hidden;
     }
-
+    
     .investment-watchlist h2{
+        display: block;
+        margin: 0 auto;
         font-family: "Lato";
         font-size: 25px;
         font-weight: 500;
         color: white;
     }
     
+    .watchlist-invest-stock{
+        border: #e3e3e3 1px solid;
+        padding: 10px;
+    }
+
+    .watchlist-invest-stock h3{
+        font-family: "Lato";
+        font-size: 15px;
+        font-weight: 300px;
+        color: white;
+    }
+    .watchlist-invest-stock h4{
+        font-family: "Lato";
+        font-size: 25px;
+        font-weight: 300px;
+        color: white;
+    }
+    
+
+    /* Trading watchlist div container */
     .trade-watchlist{
         grid-area: trade-watchlist;
         display: grid;
+        grid-template-columns: 300px;
+        grid-template-rows: 50px repeat(4, 200px);
         background-color: black; opacity: .9;
+        padding: 20px 100px;
         justify-content: center;
-        padding: 20px 0px;
+        overflow: scroll;
+        overflow-x: hidden;
     }
 
     .trade-watchlist h2{
+        display: block;
+        margin: 0 auto;
         font-family: "Lato";
         font-size: 25px;
         font-weight: 500;
+        color: white;
+    }
+
+    .watchlist-trade-stock{
+        border: #e3e3e3 1px solid;
+        padding: 10px;
+    }
+
+    .watchlist-trade-stock h3{
+        font-family: "Lato";
+        font-size: 15px;
+        font-weight: 300px;
+        color: white;
+    }
+    .watchlist-trade-stock h4{
+        font-family: "Lato";
+        font-size: 25px;
+        font-weight: 300px;
         color: white;
     }
 }
