Made some design changes to the home page, portfolio page, and about page.
- Changed big, static stock widget on the front page and switched it out for the smaller scrolling stock index widget instead. Makes it look cleaner and nicer
- Changed the background of the widget to black by adding a "background-color" in css for both the widget on the "Home" page and the "Portfolio" page.
- Changed the style of the "About page." Wasn't a big fan of the border that I had around it. I felt like I could have given it a bit more of a minimalist style. So I got rid of the border box around the text and just the page a plain white "background-color."

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -28,6 +28,11 @@ img{
     color: #333;
 }
 
+.tradingview-widget-container{
+    display: block;
+    background-color: black;
+}
+
 /* Header */
 #header-logo{
     display: block;
