--- a/css/about-style.css
+++ b/css/about-style.css
@@ -1,5 +1,5 @@
 body{
-    background: #e3e3e3;
+    background: white;
 }
 
 main{
@@ -11,21 +11,24 @@ br{
     margin-bottom: 20px;
 }
 
+.about-section-divider{
+    margin-bottom: 40px;
+}
+
 /* h1 text */
 main h2{
     display: block;
     font-family: "Lato";
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 800;
     text-align: center;
     padding: 20px;
-    text-shadow: 2px 2px 2px white;
 }
 
 /* box */
 .box-wrapper{
     display: grid;
-    padding: 40px 20px;
+    padding: 20px;
     margin: 0 auto;
 }
 
@@ -33,27 +36,31 @@ main h2{
     display: grid;
     width: auto;
     height: auto;
-    background-color: white;
-    border: black 1px solid;
-    box-shadow: 2px 2px 10px #333;
-    border-radius: 10px;
     margin: 0 auto;
 }
 
+.box-wrapper h3{
+    display: block;
+    font-family: "Lato";
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+}
+
 .box-wrapper p{
-    font-family: 'Arial';
+    font-family: 'Georgia';
     font-size: 20px;
+    line-height: 35px;
 }
 
 @media only screen and (min-width: 700px){
+
     .contact-us{
-        display: grid;
-        max-width: 1000px;
+        display: block;
+        max-width: 800px;
         height: 550px;
-        background-color: white;
-        border: black 1px solid;
-        box-shadow: 2px 2px 10px #333;
-        border-radius: 10px;
         margin: 0 auto;
     }
 }
