--- a/css/index-style.css
+++ b/css/index-style.css
@@ -221,7 +221,7 @@ img{
 
 .bg-image{
 	position: fixed;
-	background: #333 url('../img/dual-chart-photo.png');
+	background: white url('../img/dual-chart-photo.png');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
