--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -5,7 +5,7 @@
 /* Background image */
 .bg-image{
 	position: fixed;
-	background: #333 url('../img/dual-chart-photo.png');
+	background: white url('../img/dual-chart-photo.png');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
