Added new content
- Updated email in the contact section of the footer
- Created a newsletter page and added the newsletter sign up container.
- Added a wrapper to the Portfolio page and changed grid layout from 5 columns to 4.
- Switched out "Contact button on the header for a "Support" button.

--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -2,6 +2,12 @@
     padding-bottom: 20px;
 }
 
+.wrapper{
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+}
+
 /* Background image */
 .bg-image{
 	position: fixed;
@@ -159,7 +165,7 @@
     .stock-list{
         display: grid;
         grid-gap: 20px;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         margin: 20px;
         justify-content: center;
     }
