Made some design changes, created the support page, and a few other changes
- Added links to the YouTube and Instagram icons. Still need to add a link for the Twitter account.
- Added a "Content" icon on the navigation bar.
- Created the "Support" page and created css for it.
- Added the Patreon button to the support page along with information about what Patrons will get.
- Redesigned the background and moved the background image to just cover the back of the #showcase.
	○ Changed the color of the text to white and added a black background so it looks better.
- Changed the background in the "Portfolio" page to white. I'll be removing the chart background form all the pages and keeping them white so a more minimalist aesthetic.
Other smaller changes in the "Portfolio" page.

--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -1,5 +1,17 @@
-.page-divider{
-    padding-bottom: 20px;
+#page-divider{
+    width: 90%;
+    height: 1px;
+    margin-bottom: 20px;
+    border: 0;
+    background-color: gray;
+}
+
+.watchlist-divider{
+    width: 270px;
+    height: 1px;
+    border: 0;
+    background-color: white;
+    margin: 0 auto;
 }
 
 .wrapper{
@@ -8,18 +20,6 @@
     margin: 0 auto;
 }
 
-/* Background image */
-.bg-image{
-	position: fixed;
-	background: white url('../img/dual-chart-photo.png');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	width: 100%;
-	height: 3000px;
-	z-index: -1;
-	opacity: 0.5;
-}
 
 /* Page heading text */
 .port-heading{
@@ -32,7 +32,7 @@
     font-size: 35px;
     font-weight: 500;
     text-shadow: 2px 2px 2px white;
-    padding: 10px 0px;
+    padding: 50px 0px 10px 0px;
 }
 
 .stock-list{
