--- a/css/index-style.css
+++ b/css/index-style.css
@@ -7,6 +7,8 @@
     text-decoration: none;
 }
 
+
+
 img{
     display: block;
     width: 100%;
@@ -214,21 +216,21 @@ img{
     min-height: 450px;
     color: black;
     text-align: center;
-    padding-top: 50px;
     border: black 1px solid;
     /* Might consider taking this one off */
 }
 
 .bg-image{
-	position: fixed;
+	position: absolute;
 	background: white url('../img/dual-chart-photo.png');
-	background-position: center;
+	background-position-y: 9%;
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 100%;
-	height: 3000px;
-	z-index: -1;
-	opacity: 0.5;
+	width: 90%;
+	height: 450px;
+    z-index: -1;
+    opacity: 0.5;
+    margin: 0 auto;
 }
 
 .showcase-content{
@@ -237,6 +239,7 @@ img{
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
+    padding-top: 50px;
 }
 
 .showcase-content h2{
@@ -244,6 +247,8 @@ img{
     font-size: 30px;
     font-weight: 600;
     padding-bottom: 20px;
+    color: white;
+    text-shadow: 2px 2px 5px black;
 }
 
 .showcase-content p{
@@ -251,6 +256,8 @@ img{
     font-size: 20px;
     font-weight: 500;
     padding-bottom: 20px;
+    color: white;
+    text-shadow: 2px 2px 8px black;
 }
 
 #showcase .btn{
@@ -433,7 +440,7 @@ img{
     /* Navigation bar */
     .nav-bar ul{
         display: grid;
-        grid-template-columns: 150px 150px 150px 150px;
+        grid-template-columns: 150px 150px 150px 150px 150px;
         justify-content: center;
     }
 
