--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ img{
     /* Navigation bar */
     .nav-bar ul{
         display: grid;
-        grid-template-columns: 150px 150px 150px 150px;
+        grid-template-columns: 150px 150px 150px 150px 150px;
         justify-content: center;
     }
 
