--- a/css/index-style.css
+++ b/css/index-style.css
@@ -226,7 +226,7 @@ img{
 	background-position-y: 9%;
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 90%;
+	width: 100%;
 	height: 450px;
     z-index: -1;
     opacity: 0.5;
@@ -376,6 +376,20 @@ img{
         'header-grid'
         'main'
         'main-footer';
+    }
+
+    /* Background image for calendar showcase */
+    .bg-image{
+        position: absolute;
+        background: white url('../img/dual-chart-photo.png');
+        background-position-y: 9%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 90%;
+        height: 450px;
+        z-index: -1;
+        opacity: 0.5;
+        margin: 0 auto;
     }
     
     /* Main header bar */
