fixed header bug and added content to new resources page
- fixed a small issue with the header navigation sizing
- Added more content to the resources page, styled it, and made it mobile friendly. Should be very easy now to add new content with little to no adjusting to the styling.

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -452,16 +452,21 @@ img{
     }
 
     /* Navigation bar */
+    .nav-bar{
+        width: 600px;
+        margin: 0 auto;
+    }
+
     .nav-bar ul{
         display: grid;
-        grid-template-columns: 150px 150px 150px 150px 150px;
+        grid-template-columns: repeat(5, auto);
         justify-content: center;
     }
 
     .nav-bar a{
         display: block;
         background-color: black;
-        padding: 10px 0px;
+        padding: 10px;
         text-align: center;
         font-family: 'Lato';
         font-size: 18px;
