--- a/css/resources-style.css
+++ b/css/resources-style.css
@@ -1,7 +1,3 @@
-main{
-    height: 800px;
-}
-
 .wrapper{
     display: block;
     width: 90%;
@@ -12,44 +8,62 @@ main{
     display: grid;
     grid-gap: 20px;
     grid-template-columns: 1fr;
-    margin-top: 40px;
+    margin: 40px 0px;
+    /* Add color to the background of the grid and adjust for desktop version of the page */
 }
 
 .resource-info{
     display: grid;
-    height: 160px;
-    grid-template-columns: 80% 20%;
-    grid-template-areas:
-    'resource-description resource-img';
+    height: auto;
+    grid-template-columns: 1fr;
+    border-radius: 5px;
     border: black 1px solid;
 }
 
 .resource-description{
-    grid-area: resource-description;
     display: flex;
     flex-direction: column;
-    padding: 15px 0px 15px 15px;
+    padding: 10px 15px;
 }
 
 .resource-description h3{
     font-family: "Lato";
     font-size: 25px;
     font-weight: 300px;
+    color: black;
 }
 
 .resource-description p{
     font-family: "Georgia";
-    font-size: 18px;
-    padding-top: 20px;
+    font-size: 15px;
+    padding-top: 10px;
+    color: black;
 }
 
-.resource-img{
-    grid-area: resource-img;
-    display: flex;
-    width: 150px;
-    height: 150px;
-    justify-self: center;
-    align-self: center;
-    padding: 5px;
-    justify-self: end;
+.resource-info img{
+    display: none;
+}
+
+@media only screen and (min-width: 1000px){
+    .resource-info{
+        display: grid;
+        height: 160px;
+        width: 800px;
+        grid-template-columns: 1fr 250px;
+        border-radius: 5px;
+        border: black 1px solid;
+        margin: 0 auto;
+    }
+    
+    .resource-description{
+        display: flex;
+        flex-direction: column;
+        padding: 10px 15px;
+    }
+    
+    .resource-info img{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
