Added two more pages to the website and made some style changes
- Removed contact button from footer. Will keep it hidden until I can get a database up and running.
- Changed "Content" navigation icon to "Blog."
- Created "Stock Analysis" page and added some styling to it. Also added media queries for desktop version.
- Added additional information about the analysis research papers in the "About" page.

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -205,7 +205,9 @@ img{
     text-decoration: underline;
 }
 
+/* button currently hidden */
 .contact-info .btn{
+    display: none;
     padding: 20px;
     width: max-content;
 }
