--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,9 @@ img{
     text-decoration: underline;
 }
 
+/* Contact button is currently hiden for mobile and desktop versions */
 .contact-info .btn{
+    display: none;
     padding: 20px;
     width: max-content;
 }
@@ -429,92 +431,5 @@ img{
         padding: 20px;
         width: max-content;
     }
-    .main-footer{
-        display: grid;
-        height: 250px;
-        grid-template-columns: 1fr 1fr 1fr;
-        background-color: black;
-        font-family: "Lato";
-        font-weight: 400;
-        color: white;
-    }
     
-    .social-media{
-        display: block;
-        margin: 0 auto;
-        padding: 20px 0px;
-    }
-    
-    .social-media h2{
-        font-size: 20px;
-        font-weight: 300;
-        padding-bottom: 10px;
-    }
-    
-    .icon1{
-        display: flex;
-        align-items: center;
-        padding: 10px 0px;
-    }
-    
-    .icon1 i{
-        padding-right: 10px;
-    }
-    
-    .icon2{
-        display: flex;
-        align-items: center;
-        padding: 10px 0px;
-    }
-    
-    .icon2 i{
-        padding-right: 10px;
-    }
-    
-    .icon3{
-        display: flex;
-        align-items: center;
-        padding: 10px 0px;
-    }
-    
-    .icon3 i{
-        padding-right: 10px;
-    }
-    
-    .copyright-info{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 20px;
-    }
-    
-    .contact-info{
-        display: flex;
-        flex-direction: column;
-        padding: 20px 0px;
-    }
-    
-    .contact-info h2{
-        font-family: "Lato";
-        font-size: 25px;
-        font-weight: 300;
-        padding-bottom: 10px;
-    }
-    
-    .contact-info hr{
-        width: 100px;
-    }
-    
-    .contact-info p{
-        padding-top: 10px;
-    }
-    
-    .contact-info span{
-        text-decoration: underline;
-    }
-    
-    .contact-info .btn{
-        padding: 20px;
-        width: max-content;
-    }
 }
