--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -1,4 +1,4 @@
-.analysis-container hr{
+.blog-links hr{
     display: flex;
     width: 150px;
     height: 1px;
@@ -8,12 +8,12 @@
     align-self: center;
 }
 
-.content-overview-container{
+.blog-overview-container{
     display: block;
     margin: 40px 0px;
 }
 
-.content-overview-container h3{
+.blog-overview-container h3{
     font-family: "Lato";
     font-size: 35px;
     font-weight: 500;
@@ -21,67 +21,73 @@
     text-align: center;
 }
 
-.content-overview-container p{
+.blog-overview-container p{
     font-family: "Georgia";
     font-size: 20px;
     line-height: 35px;
 }
 
-.analysis-container{
+.blog-links{
     display: flex;
     flex-direction: column;
     padding-bottom: 40px;
 }
 
-.analysis-content{
+.blog-content{
     display: flex;
+    max-width: 800px;
     flex-direction: column;
     align-self: center;
+    margin: 40px 0px;
 }
 
-.analysis-content p{
+.blog-content img{
+    display: block;
+    width: 200px;
+    height: 150px;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
+.blog-content h3{
+    font-family: "Lato";
+    font-size: 25px;
+    font-weight: 500;
+    padding: 10px 0px;
+    text-align: center;
+}
+
+.blog-content p{
     font-family: "Georgia";
     font-size: 15px;
+    line-height: 25px;
     padding-bottom: 10px;
     text-align: center;
 }
 
-.analysis-content h3{
-    font-family: "Georgia";
-    font-size: 16px;
-    font-weight: 300;
-    padding: 5px 0px 10px 0px;
-    text-align: center;
-}
-
-.analysis-content h4{
-    font-family: "Georgia";
-    font-size: 40px;
-    padding: 0px 0px 15px 0px;
-    text-align: center;
-}
-
-.analysis-content a{
+.blog-content a{
+    display: inline-block;
     font-family: "Georgia";
     font-size: 18px;
-    padding-bottom: 10px 0px;
-    text-align: center;
-    text-decoration: underline;
     color: black;
+    border: black 1px solid;
+    padding: 15px;
+    text-align: center;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 1000px){
 
     /* Container for description about the content styles */
-    .content-overview-container{
+    .blog-overview-container{
         display: block;
         width: 800px;
         padding: 40px 0px;
         margin: 0 auto;
     }
-
+    
     /* Container for main content styles */
-    .analysis-container{
+    .blog-links{
         display: flex;
         flex-direction: column;
         padding-bottom: 40px;
