--- a/css/index-style.css
+++ b/css/index-style.css
@@ -249,8 +249,8 @@ img{
     font-size: 30px;
     font-weight: 600;
     padding-bottom: 20px;
-    color: white;
-    text-shadow: 2px 2px 5px black;
+    color: black;
+    text-shadow: 2px 2px 8px white;
 }
 
 .showcase-content p{
@@ -258,8 +258,8 @@ img{
     font-size: 20px;
     font-weight: 500;
     padding-bottom: 20px;
-    color: white;
-    text-shadow: 2px 2px 8px black;
+    color: black;
+    text-shadow: 2px 2px 8px white;
 }
 
 #showcase .btn{
