--- a/css/support-style.css
+++ b/css/support-style.css
@@ -1,9 +1,3 @@
-.wrapper{
-    display: block;
-    margin: 0px 40px;
-    padding-bottom: 50px;
-}
-
 .support-text{
     display: flex;
     height: 100px;
@@ -71,7 +65,7 @@
 }
 
 @media only screen and (min-width: 1000px){
-    .wrapper{
+    {
         display: block;
         width: 800px;
         margin: 0 auto;
