Changed background color of stock widget on index.html

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -32,7 +32,7 @@ img{
 
 .tradingview-widget-container{
     display: block;
-    background-color: black;
+    background-color: white;
 }
 
 /* Header */
