--- a/css/analysis-modal-style.css
+++ b/css/analysis-modal-style.css
@@ -33,6 +33,8 @@
     width: 70%;
     border-radius: 10px;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2),0 7px 20px 0 rgba(0, 0, 0, 0.651);
+    animation-name:modalopen;
+    animation-duration: 0.5s;
 }
 
 .closeBtn{
@@ -45,6 +47,11 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+@keyframes modalopen{
+    from{opacity: 0}
+    to{opacity: 1}
 }
 
 /* Main modal content */
