--- a/css/stock-analysis-style.css
+++ b/css/stock-analysis-style.css
@@ -1,61 +1,4 @@
-.button{
-    background: none;
-    width: auto;
-    height: auto;
-    border: 0;
-    margin: 0 auto;
-    font-family: "Georgia";
-    font-size: 20px;
-    text-decoration: underline;
-}
-
-.button:hover{
-    color: gray;
-    cursor: pointer;
-}
-
-.modal{
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.9);
-}
-
-.modal-content{
-    background-color: #f4f4f4;
-    margin: 1% auto;
-    padding: 20px;
-    width: 70%;
-    border-radius: 10px;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2),0 7px 20px 0 rgba(0, 0, 0, 0.651);
-    animation-name:modalopen;
-    animation-duration: 0.5s;
-}
-
-.closeBtn{
-    color: #ccc;
-    float: right;
-    font-size: 40px;
-}
-
-.closeBtn:hover,.closeBtn:focus{
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-@keyframes modalopen{
-    from{opacity: 0}
-    to{opacity: 1}
-}
-
-/* Main modal content */
-.analysis-modal-container hr{
+.analysis-container hr{
     display: flex;
     width: 250px;
     height: 1px;
@@ -65,37 +8,26 @@
     align-self: center;
 }
 
-.analysis-modal-container{
+.analysis-container{
     display: flex;
     flex-direction: column;
     padding: 40px 0px;
 }
 
-.analysis-modal-container .btn{
-    display: inline-block;
-    font-family: "Georgia";
-    font-size: 18px;
-    color: black;
-    border: black 1px solid;
-    background-color: #e3e3e3;
-    padding: 20px;
-    margin: 0 auto;
-}
-
-.analysis-modal-content{
+.analysis-content{
     display: flex;
     flex-direction: column;
     align-self: center;
 }
 
-.analysis-modal-content p{
+.analysis-content p{
     font-family: "Georgia";
     font-size: 15px;
     padding-bottom: 10px;
     text-align: center;
 }
 
-.analysis-modal-content h3{
+.analysis-content h3{
     font-family: "Georgia";
     font-size: 16px;
     font-weight: 300;
@@ -103,7 +35,7 @@
     text-align: center;
 }
 
-.analysis-modal-content h4{
+.analysis-content h4{
     font-family: "Georgia";
     font-size: 40px;
     padding: 0px 0px 15px 0px;
@@ -145,11 +77,21 @@
     line-height: 35px;
 }
 
+.btn{
+    display: inline-block;
+    font-family: "Georgia";
+    font-size: 18px;
+    color: black;
+    border: black 1px solid;
+    background-color: #e3e3e3;
+    padding: 20px;
+    margin: 0 auto;
+}
 
 @media only screen and (min-width: 1000px){
 
     /* Container for main content styles */
-    .analysis-modal-container{
+    .analysis-container{
         display: flex;
         flex-direction: column;
         padding: 40px 0px;
@@ -157,7 +99,7 @@
         margin: 0 auto;
     }
 
-    .analysis-modal-container{
+    .analysis-container{
         display: flex;
         flex-direction: column;
         padding-bottom: 40px;
