--- a/css/style.css
+++ b/css/style.css
@@ -246,10 +246,11 @@ img{
     .header-media{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 0px 5px;
+        grid-auto-rows: 50px;
+        grid-gap: 1px 5px;
         grid-area: header-media;
         justify-self: center;
-        align-items: center;
+        margin: 20% auto;
         color: white;
     }
 
