--- a/css/blog-post-style.css
+++ b/css/blog-post-style.css
@@ -1,7 +1,3 @@
-main{
-    height: 800px;
-}
-
 .blog-post-content{
     display: block;
     margin: 40px auto;
@@ -10,7 +6,7 @@ main{
 .title{
     font-family: "Lato";
     font-size: 35px;
-    font-weight: 500px;
+    font-weight: 500;
     text-align: center;
 }
 
