--- a/css/blog-post-style.css
+++ b/css/blog-post-style.css
@@ -32,11 +32,39 @@
     padding: 20px 0px;
 }
 
+#resources{
+    display: block;
+    margin: 40px auto;
+}
+
+#resources h3{
+    font-family: "Lato";
+    font-size: 30px;
+    font-weight: 300;
+    text-align: center;
+    padding-bottom: 40px;
+    text-decoration: underline;
+}
+
+#resources p{
+    font-family: "Georgia";
+    font-size: 18px;
+    padding-bottom: 20px;
+    text-decoration: underline;
+}
+
+#resources a{
+    font-family: "Georgia";
+    font-size: 16px;
+}
+
 
 @media only screen and (min-width: 1000px){
     .blog-post-content{
-        display: block;
         width: 800px;
-        margin: 40px auto;
+    }
+
+    #resources{
+        width: 800px;
     }
 }
