--- a/css/index-style.css
+++ b/css/index-style.css
@@ -34,8 +34,8 @@
     font-size: 30px;
     font-weight: 600;
     padding-bottom: 20px;
-    color: black;
-    text-shadow: 2px 2px 8px white;
+    color: white;
+    text-shadow: 0px 5px 8px black;
 }
 
 .showcase-content p{
@@ -43,8 +43,8 @@
     font-size: 20px;
     font-weight: 500;
     padding-bottom: 20px;
-    color: black;
-    text-shadow: 2px 2px 8px white;
+    color: white;
+    text-shadow: 2px 2px 8px black;
 }
 
 #showcase .btn{
