--- a/css/calendar-modal-style.css
+++ b/css/calendar-modal-style.css
@@ -35,6 +35,7 @@
     box-shadow: 2px 5px 10px rgba(0,0,0,0.8);
     animation-name: modalopen;
     animation-duration: .5s;
+    border-radius: 10px;
 }
 
 @keyframes modalopen{
@@ -43,13 +44,13 @@
 }
 
 .closeBtn{
-    color: #ccc;
+    color: black;
     float: right;
     font-size: 30px;
 }
 
 .closeBtn:hover,.closeBtn:focus{
-    color: #000;
+    color: gray;
     text-decoration: none;
     cursor: pointer;
 }
