--- a/css/stock-analysis-style.css
+++ b/css/stock-analysis-style.css
@@ -85,7 +85,7 @@
     border: black 1px solid;
     background-color: #e3e3e3;
     padding: 20px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 @media only screen and (min-width: 1000px){
