--- a/css/calendar-modal-style.css
+++ b/css/calendar-modal-style.css
@@ -57,46 +57,10 @@
 
 
 /* Responsive iFrame */
-
-.responsive-iframe-container{
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-    margin: 40px auto;
+.responsive-cal{
+position: relative; padding-bottom: 75%; height: 0; overflow: hidden;
 }
     
-.responsive-iframe-container iframe,
-.vresponsive-iframe-container object,
-.vresponsive-iframe-container embed{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-/* .responsive-iframe-container{ 
-    display: flex;
-    width: auto;
-    height: auto;
-    flex-direction: column;
-    align-self: flex-end;
-    margin: 40px auto;
-}
-*/
-
-.responsive-iframe-container h3{
-    font-family: "Georgia";
-    font-size: 25px;
-    color: black;
-    width: auto;
-    height: 50px;
-    margin: auto;
-}
-
-.google-calendar-insert{
-    display: block;
-    margin: 0 auto;
+.responsive-cal iframe{
+position: absolute; top:0; left: 0; width: 100%; height: 100%;
 }
