--- a/css/blog-post-style.css
+++ b/css/blog-post-style.css
@@ -56,12 +56,20 @@
 #resources a{
     font-family: "Georgia";
     font-size: 16px;
+    color: black;
 }
 
+#resources a:hover{
+    color: rgba(0, 53, 151);
+}
+
+#resources br{
+    margin-bottom: 20px
+}
 
 @media only screen and (min-width: 1000px){
     .blog-post-content{
-        width: 800px;
+        width: 600px;
     }
 
     #resources{
