--- a/css/stock-analysis-style.css
+++ b/css/stock-analysis-style.css
@@ -49,6 +49,7 @@
 
 .img-container img{
     display: block;
+    max-width: 500px;
     margin: 0 auto;
 }
 
@@ -107,8 +108,6 @@
 
     .img-container img{
         display: block;
-        width: 500px;
-        height: 150px;
         margin: 0 auto;
     }
 }
