--- a/css/blog-post-style.css
+++ b/css/blog-post-style.css
@@ -1,3 +1,10 @@
+img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-shadow: 2px 2px 5px black;
+}
+
 .blog-post-content{
     display: block;
     margin: 40px auto;
@@ -33,8 +40,10 @@
 }
 
 #resources{
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin: 40px auto;
+    align-items: center;
 }
 
 #resources h3{
@@ -51,12 +60,14 @@
     font-size: 18px;
     padding-bottom: 20px;
     text-decoration: underline;
+    text-align: center;
 }
 
 #resources a{
     font-family: "Georgia";
     font-size: 16px;
     color: black;
+    text-align: center;
 }
 
 #resources a:hover{
@@ -64,7 +75,7 @@
 }
 
 #resources br{
-    margin-bottom: 20px
+    margin-bottom: 20px;
 }
 
 @media only screen and (min-width: 1000px){
